Added a new example pulling whats available in the DB Updated all examples to point to new db

--- a/docs/gallery/compare_SSA_instruments_example.ipynb
+++ b/docs/gallery/compare_SSA_instruments_example.ipynb
@@ -36,8 +36,8 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "# Connect to the database we made.\n",
-    "db_name = 'localhost/snowex'\n",
+    "# Connect to the database\n",
+    "db_name = 'db.snowexdata.org/snowex'\n",
     "engine, session = get_db(db_name, credentials='./credentials.json')\n",
     "\n",
     "# Grab all the equivalent diameter profiles\n",
@@ -185,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
