--- a/docs/gallery/compare_depth_maps_example.ipynb
+++ b/docs/gallery/compare_depth_maps_example.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +44,17 @@
     "from shapely.geometry import Polygon, Point\n",
     "import pandas as pd \n",
     "\n",
+    "# Connect to the database we made.\n",
+    "db_name = 'db.snowexdata.org/snowex'\n",
+    "engine, session = get_db(db_name, credentials='./credentials.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Point on HWY 65 in survey area near skyway ski trail \n",
     "# p = Point(753809, 4325346)\n",
     "\n",
@@ -61,10 +72,6 @@
     "# Date for QSI over flight\n",
     "dt = pd.to_datetime('02-01-2020').date()\n",
     "\n",
-    "# Connect to the database we made.\n",
-    "db_name = 'localhost/snowex'\n",
-    "engine, session = get_db(db_name, credentials='./credentials.json')\n",
-    "\n",
     "datasets = []\n",
     "\n",
     "# Build a polygon  using the buffer distance \n",
@@ -77,7 +84,7 @@
     "buffer_shp = Polygon([[x1, y1], [x1, y2], [x2, y2], [x2, y1]])       # Construct it using shapely\n",
     "buffered_pit = from_shape(buffer_shp, srid=26912).ST_AsEWKT()        # Save one for use with the database\n",
     "\n",
-    "buffered_pit_df = gpd.GeoDataFrame({'geometry':[buffer_shp, p]})     # Save one for plotting\n"
+    "buffered_pit_df = gpd.GeoDataFrame({'geometry':[buffer_shp, p]})     # Save one for plotting"
    ]
   },
   {
@@ -89,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using a resolution of 2.999870551816784 m\n"
+      "Using a resolution of 1.0 m\n"
      ]
     }
    ],
@@ -116,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,20 +186,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "QSI:\n",
-      "Original Resolution = 0.5 x0.5\n",
-      "Raster 201 X 201, Final Res = 2.999870551816784 x 2.999870551816784\n",
-      "BoundingBox(left=742775.9880907672, bottom=4322388.02640743, right=743378.9620716823, top=4322991.000388345)\n",
-      "\n",
-      "ASO:\n",
-      "Original Resolution = 2.999870551816784 x2.999870551816784\n",
-      "Raster 201 X 201, Final Res = 2.999870551816784 x 2.999870551816784\n",
-      "BoundingBox(left=742775.1998838789, bottom=4322387.760631886, right=743378.1738647941, top=4322990.734612801)\n",
-      "\n",
-      "USGS:\n",
-      "Original Resolution = 1.0 x1.0\n",
-      "Raster 201 X 201, Final Res = 2.999870551816784 x 2.999870551816784\n",
-      "BoundingBox(left=742775.9878318708, bottom=4322388.026666326, right=743378.961812786, top=4322991.000647241)\n"
+      "QSI:\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-1524931b2284>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0mrio\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msurveyor\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mretrieve_matched_raster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrio\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msurveyor\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msurveyor\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnodata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-136cc57bb3f1>\u001b[0m in \u001b[0;36mretrieve_matched_raster\u001b[0;34m(data_name, surveyors, polygon, res, date)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mST_PixelWidth\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImageData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraster\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mST_PixelHeight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImageData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraster\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mres_o\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImageData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mdata_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImageData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msurveyors\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0msurveyors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlimit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Original Resolution = {} x{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres_o\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mres_o\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m# Return a tiff thats resampled the snow off to the same resolution as the Snow on and clip to the same extents\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -828,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
