--- a/docs/gallery/getting_started_example.ipynb
+++ b/docs/gallery/getting_started_example.ipynb
@@ -18,7 +18,7 @@
     "from snowexsql.db import get_db\n",
     "\n",
     "# If you followed the install instructions the database name should be snowex\n",
-    "db_name = 'localhost/snowex'\n",
+    "db_name = 'db.snowexdata.org/snowex'\n",
     "\n",
     "# Using the function get_db, we receive 2 ways to interact with the database\n",
     "engine, session = get_db(db_name, credentials='./credentials.json')"
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2S46, 8C31, 9N43, 4N27, 2S9, 8N45, 1S13, 8C18, 9N30, 2C3, 1S17, 8C29, 6C10, 4C30, 1S2, 2C12, 7N57, 1C5, 2N12, 9N47, 5N15, 6S34, 9S51, 1S8, 3S14, 3S38, 8C35, 6N18, Skyway Tree, 2C13, 5S31, County Line Tree, 5S24, 5N50, 6N16, 5S42, 8N35, 6C24, 5S43, 8N9, 9C28, 2S7, 6S15, 1N5, 7N40, 6N17, 1N7, 2N49, 8C11, 9N44, Lodge, 2S36, 1N1, 8N25, 2C6, 2S20, 6N31, 6N36, County Line Tree, 8N33, 1C7, 8S28, 8N51, 5N32, 5S21, 5C20, 2N4, 6S44, 1C8, 5N10, County Line Open, 2N13, 2C33, 1N23, 2S25, 9N28, 8C36, 2S48, 1N6, 2C9, Skyway Tree, 1C1, Skyway Open, 9N29, 3S33, 2S37, 2S45, 2S4, 1N20, 2S11, 2N14, 5S49, 9S40, 5S29, 4N2, 5N11, 8N55, 9N56, 1S1, 9S39, 5N24, 6C34, Skyway Tree, 9N42, 1C14, 9C23, 5N10, 5N19, 8C25, 8C22, 3N53, 8N58, TLSFL2A, 9N39, 2S35, 1C1, 6S26, 2S6, 6S22, Skyway Open, 8N52, 3N22, 7S50, 2N21, 8N37, 2C4, Skyway Open, 6S53, 8C32, 9N59, 3S47, 5N41, 5C27, Skyway Open, 7C15, 9C19, County Line Tree, 3S5, 5C21, 6S32, 3S52, 2S27, 2S10, County Line Open, 8S41, 3N26, 7S23, 2S16, 9C17, 8N38, 2S3, 6C37, 6S19, 2N8, FL2A, 2N48, 8C26, 1N3, 8S18, FL1B, 8S30, 1S12, 6N46, 8N54, 8N34, 2C2, 9C16\n",
+      "5N15, 2S20, 2N13, 7S50, 7S23, 8N33, 9N30, 6S53, 6S32, 8N35, 9N39, 5N10, 8S41, 2N49, 6N17, TLSFL2A, 5N11, 2S45, 1C14, 8C26, 2C2, 2C9, 8S28, 9C28, 2C4, 1C7, 1C1, 4C30, 2C6, 6C24, 2N12, 8C22, 1C8, 2C3, 6C10, GML, 9C23, 8C31, 8C32, 5C27, 1S17, 6N16, 3N26, 1C1, 1S2, 2S16, 1N1, 9N28, 2S7, 2N8, 2S10, 8C18, 1N20, 8S18, 8C29, 6S22, 9C16, 8C11, 8N9, 8C36, 1S13, 6S15, 8C35, 2S4, 2S9, 8N54, 6S34, 5S49, 8N37, 9N47, 3S52, 8N52, 5S42, 9N42, 5S29, 8N51, 2S46, 2S27, 6S44, 7N40, 3S33, 9N43, 9N56, 6C37, 3S5, 6S19, 2S3, 1S1, 2S25, 5S43, 2S48, 2S36, 5S24, 9S51, 8S30, 3S47, FL1B, 5N24, 6S26, 2C12, 5N32, 2C13, 1C5, 9N29, 4N27, 8N34, 2C33, 9C17, 5C21, 8C25, 5S31, 2S35, 9C19, 6N36, 5C20, 6N31, 8N38, 7C15, 5N41, 9N44, 5N50, 3S14, 1S8, 5S21, 9S39, 2S37, 6N46, 8N45, 2N48, 6C34, 2S11, 3S38, 9S40, 1N3, 2N21, 2N14, 2S6, 1N7, 1N23, 1N5, 1S12, FL2A, 5N10, 2N4, 3N22, 5N19, 4N2, 7N57, 1N6, 3N53, 6N18, 8N55, 9N59, 8N25, 8N58\n",
       "\n"
      ]
     }
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2S46, 8C31, 9N43, 4N27, 2S9, 8N45, 1S13, 8C18, 9N30, 2C3, 1S17, 8C29, 6C10, 4C30, 1S2, 2C12, 7N57, 1C5, 2N12, 9N47, 5N15, 6S34, 9S51, 1S8, 3S14, 3S38, 8C35, 6N18, Skyway Tree, 2C13, 5S31, County Line Tree, 5S24, 5N50, 6N16, 5S42, 8N35, 6C24, 5S43, 8N9, 9C28, 2S7, 6S15, 1N5, 7N40, 6N17, 1N7, 2N49, 8C11, 9N44, Lodge, 2S36, 1N1, 8N25, 2C6, 2S20, 6N31, 6N36, County Line Tree, 8N33, 1C7, 8S28, 8N51, 5N32, 5S21, 5C20, 2N4, 6S44, 1C8, 5N10, County Line Open, 2N13, 2C33, 1N23, 2S25, 9N28, 8C36, 2S48, 1N6, 2C9, Skyway Tree, 1C1, Skyway Open, 9N29, 3S33, 2S37, 2S45, 2S4, 1N20, 2S11, 2N14, 5S49, 9S40, 5S29, 4N2, 5N11, 8N55, 9N56, 1S1, 9S39, 5N24, 6C34, Skyway Tree, 9N42, 1C14, 9C23, 5N10, 5N19, 8C25, 8C22, 3N53, 8N58, TLSFL2A, 9N39, 2S35, 1C1, 6S26, 2S6, 6S22, Skyway Open, 8N52, 3N22, 7S50, 2N21, 8N37, 2C4, Skyway Open, 6S53, 8C32, 9N59, 3S47, 5N41, 5C27, Skyway Open, 7C15, 9C19, County Line Tree, 3S5, 5C21, 6S32, 3S52, 2S27, 2S10, County Line Open, 8S41, 3N26, 7S23, 2S16, 9C17, 8N38, 2S3, 6C37, 6S19, 2N8, FL2A, 2N48, 8C26, 1N3, 8S18, FL1B, 8S30, 1S12, 6N46, 8N54, 8N34, 2C2, 9C16\n",
+      "5N15, 2S20, 2N13, 7S50, 7S23, 8N33, 9N30, 6S53, 6S32, 8N35, 9N39, 5N10, 8S41, 2N49, 6N17, TLSFL2A, 5N11, 2S45, 1C14, 8C26, 2C2, 2C9, 8S28, 9C28, 2C4, 1C7, 1C1, 4C30, 2C6, 6C24, 2N12, 8C22, 1C8, 2C3, 6C10, GML, 9C23, 8C31, 8C32, 5C27, 1S17, 6N16, 3N26, 1C1, 1S2, 2S16, 1N1, 9N28, 2S7, 2N8, 2S10, 8C18, 1N20, 8S18, 8C29, 6S22, 9C16, 8C11, 8N9, 8C36, 1S13, 6S15, 8C35, 2S4, 2S9, 8N54, 6S34, 5S49, 8N37, 9N47, 3S52, 8N52, 5S42, 9N42, 5S29, 8N51, 2S46, 2S27, 6S44, 7N40, 3S33, 9N43, 9N56, 6C37, 3S5, 6S19, 2S3, 1S1, 2S25, 5S43, 2S48, 2S36, 5S24, 9S51, 8S30, 3S47, FL1B, 5N24, 6S26, 2C12, 5N32, 2C13, 1C5, 9N29, 4N27, 8N34, 2C33, 9C17, 5C21, 8C25, 5S31, 2S35, 9C19, 6N36, 5C20, 6N31, 8N38, 7C15, 5N41, 9N44, 5N50, 3S14, 1S8, 5S21, 9S39, 2S37, 6N46, 8N45, 2N48, 6C34, 2S11, 3S38, 9S40, 1N3, 2N21, 2N14, 2S6, 1N7, 1N23, 1N5, 1S12, FL2A, 5N10, 2N4, 3N22, 5N19, 4N2, 7N57, 1N6, 3N53, 6N18, 8N55, 9N59, 8N25, 8N58\n",
       "\n"
      ]
     }
@@ -113,13 +113,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Close your session to avoid hanging transactions\n",
     "session.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
