Converted over surveyors to observers

--- a/docs/gallery/plot_raster_example.ipynb
+++ b/docs/gallery/plot_raster_example.ipynb
@@ -79,7 +79,7 @@
     "print('Grabbing rasters that overlap on the point {}'.format(p_shp))\n",
     "\n",
     "# Grab the returned raster as a tiff\n",
-    "q = session.query(func.ST_AsTiff(ImageData.raster)).filter(ImageData.surveyors=='ASO Inc.')\n",
+    "q = session.query(func.ST_AsTiff(ImageData.raster)).filter(ImageData.observers=='ASO Inc.')\n",
     "q = q.filter(ImageData.type=='depth')\n",
     "\n",
     "# Filter rasters by where a tile intersects wihtour pit location\n",
@@ -168,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
