--- a/docs/gallery/raster_union_and_more_example.ipynb
+++ b/docs/gallery/raster_union_and_more_example.ipynb
@@ -112,7 +112,7 @@
     "q = session.query(func.ST_AsTiff(func.ST_Union(ImageData.raster, type_=Raster)))\n",
     "\n",
     "# Only grab rasters that are the bare earth DEM from USGS\n",
-    "q = q.filter(ImageData.type == 'DEM').filter(ImageData.surveyors=='USGS')\n",
+    "q = q.filter(ImageData.type == 'DEM').filter(ImageData.observers=='USGS')\n",
     "\n",
     "# And grab rasters touching the circle\n",
     "q = q.filter(gfunc.ST_Intersects(ImageData.raster, buffered_pit))\n",
@@ -225,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
