--- a/docs/gallery/api_plot_pit_density_example.ipynb
+++ b/docs/gallery/api_plot_pit_density_example.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -550,66 +550,6 @@
        "      <td>62.000000</td>\n",
        "      <td>254.141026</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-02-13</th>\n",
-       "      <td>23020.5</td>\n",
-       "      <td>44.30447</td>\n",
-       "      <td>-115.23606</td>\n",
-       "      <td>4.907204e+06</td>\n",
-       "      <td>640697.679385</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>68.000000</td>\n",
-       "      <td>58.230769</td>\n",
-       "      <td>276.166667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-02-19</th>\n",
-       "      <td>23108.5</td>\n",
-       "      <td>44.30462</td>\n",
-       "      <td>-115.23603</td>\n",
-       "      <td>4.907220e+06</td>\n",
-       "      <td>640699.713907</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>72.000000</td>\n",
-       "      <td>62.000000</td>\n",
-       "      <td>274.763889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-02-27</th>\n",
-       "      <td>23189.5</td>\n",
-       "      <td>44.30454</td>\n",
-       "      <td>-115.23603</td>\n",
-       "      <td>4.907211e+06</td>\n",
-       "      <td>640699.905052</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>69.000000</td>\n",
-       "      <td>59.000000</td>\n",
-       "      <td>295.045455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-05</th>\n",
-       "      <td>23269.0</td>\n",
-       "      <td>44.30448</td>\n",
-       "      <td>-115.23599</td>\n",
-       "      <td>4.907205e+06</td>\n",
-       "      <td>640703.238968</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>65.000000</td>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>319.939394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-03-12</th>\n",
-       "      <td>23358.5</td>\n",
-       "      <td>44.30443</td>\n",
-       "      <td>-115.23607</td>\n",
-       "      <td>4.907199e+06</td>\n",
-       "      <td>640696.977316</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>68.000000</td>\n",
-       "      <td>58.000000</td>\n",
-       "      <td>323.954545</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -622,11 +562,6 @@
        "2020-01-23  22746.0  44.30461 -115.23598  4.907219e+06  640703.725988   \n",
        "2020-01-30  22830.5  44.30461 -115.23598  4.907219e+06  640703.725988   \n",
        "2020-02-06  22910.0  44.30458 -115.23594  4.907216e+06  640706.988222   \n",
-       "2020-02-13  23020.5  44.30447 -115.23606  4.907204e+06  640697.679385   \n",
-       "2020-02-19  23108.5  44.30462 -115.23603  4.907220e+06  640699.713907   \n",
-       "2020-02-27  23189.5  44.30454 -115.23603  4.907211e+06  640699.905052   \n",
-       "2020-03-05  23269.0  44.30448 -115.23599  4.907205e+06  640703.238968   \n",
-       "2020-03-12  23358.5  44.30443 -115.23607  4.907199e+06  640696.977316   \n",
        "\n",
        "            utm_zone      depth  bottom_depth       value  \n",
        "date                                                       \n",
@@ -634,15 +569,10 @@
        "2020-01-09      11.0  51.000000     41.000000  156.777778  \n",
        "2020-01-23      11.0  61.727273     51.727273  254.166667  \n",
        "2020-01-30      11.0  72.000000     62.000000  236.000000  \n",
-       "2020-02-06      11.0  72.000000     62.000000  254.141026  \n",
-       "2020-02-13      11.0  68.000000     58.230769  276.166667  \n",
-       "2020-02-19      11.0  72.000000     62.000000  274.763889  \n",
-       "2020-02-27      11.0  69.000000     59.000000  295.045455  \n",
-       "2020-03-05      11.0  65.000000     55.000000  319.939394  \n",
-       "2020-03-12      11.0  68.000000     58.000000  323.954545  "
+       "2020-02-06      11.0  72.000000     62.000000  254.141026  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +582,7 @@
     "df[\"value\"] = df[\"value\"].astype(float)\n",
     "df.set_index(\"date\", inplace=True)\n",
     "mean_values = df.groupby(df.index).mean()\n",
-    "mean_values"
+    "mean_values.head()"
    ]
   },
   {
