Update readthedocs configuration for updated template schema. Add plotly to docs reqs. Add template for plotly js cdn

--- a/docs/gallery/api_plot_pit_density_example.ipynb
+++ b/docs/gallery/api_plot_pit_density_example.ipynb
@@ -613,7 +613,10 @@
    "outputs": [],
    "source": [
     "# !pip install plotly\n",
-    "import plotly.express as px\n"
+    "import plotly.express as px\n",
+    "# For rendering in readthedocs\n",
+    "import plotly.offline as py\n",
+    "py.init_notebook_mode(connected=True)"
    ]
   },
   {
